# cjm-tqdm-capture

./: README.md  index.html  job_runner.html  job_runner.html.md  patch_tqdm.html  patch_tqdm.html.md  progress_info.html  progress_info.html.md  progress_monitor.html  progress_monitor.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  streaming.html  streaming.html.md
cjm_tqdm_capture/: job_runner.py  patch_tqdm.py  progress_info.py  progress_monitor.py  streaming.py
claude-docs/fasthtml/: README.md  background_tasks.md  best_practice.md  concise_guide.md  core.md  custom_css_adaptations.md  defining_xt_component.md  handlers.md  live_reload.md  response_types.md  websockets.md  (+1 more)
examples/: .sesskey  01_basic_example.ipynb  01_basic_example_htmx_polling.ipynb  01_basic_example_htmx_sse.ipynb  01_basic_htmx_sse_example.ipynb  01_basic_sse_example.ipynb  01_basic_sse_example_pythonic.ipynb  02_complete_app.ipynb  02_complete_app_htmx_polling.ipynb  02_complete_app_htmx_sse.ipynb  02_multiple_progress_bars.ipynb  02_simple_progress_tracking_htmx_sse.ipynb  03_complete_app_htmx_sse.ipynb  03_htmx_integration.ipynb  03_htmx_integration_htmx_polling.ipynb  03_htmx_integration_htmx_sse.ipynb  04_job_queue.ipynb  04_job_queue_htmx_polling.ipynb  04_job_queue_htmx_sse.ipynb  05_job_queue_htmx_sse.ipynb  05_multi_stage.ipynb  05_multi_stage_htmx_polling.ipynb  05_multi_stage_htmx_sse.ipynb  fashtml_htmx_sse_demo.ipynb
nbs/: index.ipynb  job_runner.ipynb  nbdev.yml  patch_tqdm.ipynb  progress_info.ipynb  progress_monitor.ipynb  streaming.ipynb
